#779: correct IT